// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. iconfacebook renders with different colours 1`] = `
<RNSVGSvgView>
  <RNSVGGroup>
    <RNSVGGroup
      fill={-341282}
      stroke={-4128786}
    >
      <RNSVGPath />
    </RNSVGGroup>
  </RNSVGGroup>
</RNSVGSvgView>
`;

exports[`2. iconforwardarrow renders with different colours 1`] = `
<RNSVGSvgView>
  <RNSVGGroup>
    <RNSVGGroup
      fill={-341282}
    >
      <RNSVGPath />
    </RNSVGGroup>
  </RNSVGGroup>
</RNSVGSvgView>
`;

exports[`3. iconstar renders with different colours 1`] = `
<RNSVGSvgView>
  <RNSVGGroup>
    <RNSVGPath
      fill={-341282}
      stroke={-4128786}
    />
  </RNSVGGroup>
</RNSVGSvgView>
`;

exports[`4. iconcopylink renders with different colours 1`] = `
<RNSVGSvgView>
  <RNSVGGroup>
    <RNSVGPath
      fill={-341282}
      stroke={-4128786}
    />
  </RNSVGGroup>
</RNSVGSvgView>
`;

exports[`5. iconsavebookmark renders with different colours 1`] = `
<RNSVGSvgView>
  <RNSVGGroup>
    <RNSVGPath
      fill={-341282}
      stroke={-4128786}
    />
  </RNSVGGroup>
</RNSVGSvgView>
`;

exports[`6. icontwitter renders with different colours 1`] = `
<RNSVGSvgView>
  <RNSVGGroup>
    <RNSVGPath
      fill={-341282}
      stroke={-4128786}
    />
  </RNSVGGroup>
</RNSVGSvgView>
`;

exports[`7. iconvideo renders with different colours 1`] = `
<RNSVGSvgView>
  <RNSVGGroup>
    <RNSVGRect
      fill={-341282}
      stroke={-4128786}
    />
    <RNSVGPath
      fill={-341282}
      stroke={-4128786}
    />
  </RNSVGGroup>
</RNSVGSvgView>
`;

exports[`8. iconvideo360player renders with different colours 1`] = `
<RNSVGSvgView>
  <RNSVGGroup>
    <RNSVGPath
      fill={-341282}
      stroke={-4128786}
    />
  </RNSVGGroup>
</RNSVGSvgView>
`;

exports[`9. thestlogo renders with different colours 1`] = `
<RNSVGSvgView>
  <RNSVGGroup>
    <RNSVGPath
      fill={-341282}
      stroke={-4128786}
    />
  </RNSVGGroup>
</RNSVGSvgView>
`;

exports[`10. thetimeslogo renders with different colours 1`] = `
<RNSVGSvgView>
  <RNSVGGroup>
    <RNSVGPath
      fill={-341282}
      stroke={-4128786}
    />
  </RNSVGGroup>
</RNSVGSvgView>
`;

exports[`11. closeicon renders with different colours 1`] = `
<RNSVGSvgView>
  <RNSVGGroup>
    <RNSVGPath
      fill={-341282}
      stroke={-341282}
    />
  </RNSVGGroup>
</RNSVGSvgView>
`;
